<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.MaterialTheme"
    android:background="@drawable/bckground"
    tools:context=".generateQRActivity">

    <FrameLayout
        android:id="@+id/QRFrame"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <ImageView
        android:id="@+id/QRImgView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
            android:contentDescription="@string/ImageViewDescription" />


        <TextView
            android:id="@+id/QRTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:elevation="1dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/genQR"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/QRFrame"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/text"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textImeMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_style"
        android:text="@string/button_one" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_below="@id/generateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="150dp"
        android:background="@drawable/button_style"
        android:padding="10dp"
        android:text="@string/BackButton" />

    <TextView
        android:id="@+id/TipText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/backBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/TipText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/custom_grey"
        android:textSize="13sp" />

</RelativeLayout>







